@@ -48,6 +48,16 @@ SKIP: {
     my $outPdl = $nc->get('var1');
     ok(1, 'get deflated variable');
     ok(eq_array([$outPdl->list], [$pdl->list]), "write/read equal");
+
+    # default fill value
+    my $pdlFill = $pdl->copy;
+    $pdlFill->slice("0,0") .= PDL::NetCDF::NC_FILL_FLOAT();
+    $nc->put ('var4', ['dim1', 'dim2'], $pdlFill, {DEFLATE => 7, SHUFFLE => 1});
+    ok(1, "put with deflate and no _FillValue");
+    $nc->sync;
+    my $pOut = $nc->get('var4',{PDL_BAD => 1});
+    ok(($pOut->isbad)->sum == 1, "default fill-value detected in nc");
+
     unlink $bar if -f $bar;
 }
 
